subcharts/opentelemetry-demo/examples/public-hosted-ingress/rendered/opentelemetry-collector/ingress.yaml
---
# Source: opentelemetry-demo/charts/opentelemetry-collector/templates/ingress.yaml
apiVersion: "networking.k8s.io/v1"
kind: Ingress
metadata:
  name: example-otelcol
  labels:
    helm.sh/chart: opentelemetry-collector-0.55.1
    app.kubernetes.io/name: otelcol
    app.kubernetes.io/instance: example
    app.kubernetes.io/version: "0.76.1"
    app.kubernetes.io/managed-by: Helm
    component: standalone-collector
spec:
  rules:
    - host: "otel-demo-collector.example.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: example-otelcol
                port:
                  number: 4318
